@@ -1,3 +1,8 @@
+2004-10-09  Michael Koch  <konqueror@gmx.de>
+
+	* gnu/java/awt/peer/gtk/GdkGraphics2D.java
+	(isBufferedImageGraphics): Simplified.
+
 2004-10-09  Paul Jenner  <psj.home@ntlworld.com>
 
 	* javax/swing/JTree.java
